@@ -6274,3 +6274,15 @@ Changes to be committed:
 	modified:   Doc/K/T.2015.pXr.cs
 	modified:   History.txt
 
++---------+---------+---------+---------+---------+---------+---------+---------+ 
+fix_2p1m_LastFrame.2015/12/16.16_26_32.93.K.MzM.T@WS 
+On branch master
+Your branch is up-to-date with 'origin/master'.
+
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	modified:   History.txt
+	modified:   ZGame/3dsMax/FBX/contentexporter/importfbx/consolemain.cpp
+	modified:   ZGame/3dsMax/FBX/contentexporter/sdkmeshfilewriter/sdkmeshfilewriter.cpp
+
